--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -33,8 +33,9 @@
 .fr {
   width: 100%;
   height: 100%;
-  background-color: #f2f3f5;
 }
 .layui-body {
+  padding: 15px;
   overflow: hidden;
+  background-color: #f2f3f5;
 }
